2013-07-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Really fix the test whether the compiler uses the
	non-fragile ABI by default. It should now work on all platforms
	with either gcc or clang.
	* configure: Regenerated.

2013-07-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Revert last change to get nonfragile abi detection
        working on gnu/linux and freebsd again (not tested on other platforms).
	* configure: Regenerated.

2013-07-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Rewrite test whether the compiler supports the
	non-fragile ABI once more, so that it now reports the correct
	result.
	* configure: Regenerated.

2013-07-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Version:
        * Documentation/news.texi:
        * Documentation/releasenotes.texi:
        Make minor bugfix release ... Version 2.6.5
        Update release notes/documentation

2013-07-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Rewrite test whether the compiler supports the
	non-fragile ABI with portable code that does not rely on a BSD
	compatible echo command.
	* configure: Regenerated.

2013-07-04  Richard Frith-Macdonald <rfm@gnu.org>

        * rules.make: Fix order of includes directories ... SYSTEM_INCLUDES
        should come last so that conflices between files of the same name in
        different directories are resolved in the correct/expected order.

2013-06-17  Stefan Bidi <stefanbidi@gmail.com>

        * TestFramework/gnustep-tests.in: add support for .c and .cc files

2012-04-08  Richard Frith-Macdonald <rfm@gnu.org>

        * TestFramework/ObjectTesting.h: Fix error performing equality test
        in copying protocol test macro.

2012-03-28  Richard Frith-Macdonald <rfm@gnu.org>

        Make release
	* Version 2.6.4
        Update release notes/documentation

2012-03-25  Richard Frith-Macdonald <rfm@gnu.org>

        * TestFramework/Testing.h: Use -isEqualForTestcase: for PASS_EQUAL